<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Change</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reminder_detail">ReminderDetailActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="excercise_title_hint">Enter Excercise Name</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="textView_set">Sets</string>
    <string name="textView_targetWeight">Target Weight</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title_activity_routine_edit">RoutineEditActivity</string>
    <string name="title_activity_calendar_view">CalendarViewActivity</string>
    <string name="title_activity_start_workout">StartWorkoutActivity</string>

</resources>
